--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,9 @@ services:
     env: python
     plan: starter
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    startCommand: gunicorn app_simple:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.16
+      - key: TF_CPP_MIN_LOG_LEVEL
+        value: 2
