Create lightweight demo version for Render free tier
- Added app_lightweight.py without TensorFlow dependencies
- Created minimal requirements_lightweight.txt
- Added demo mode with random predictions
- Created lightweight HTML template
- Updated render.yaml for lightweight deployment
- Removed large model file dependency
- Added comprehensive demo information

--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,8 @@ services:
     name: plant-species-detection
     env: python
     plan: starter
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app_simple:app
+    buildCommand: pip install -r requirements_lightweight.txt
+    startCommand: gunicorn app_lightweight:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.16
-      - key: TF_CPP_MIN_LOG_LEVEL
-        value: 2
